# aws-mlops-practice

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose-final.yaml  compose.yaml  pyproject.toml  tox.ini
docker/: Dockerfile  Dockerfile.fluentd  Dockerfile.grafana  Dockerfile.importer  Dockerfile.prometheus  Dockerfile.pushgateway
fluentd/ecs/: fluent.conf
grafana/dashboards/: dashboard.json  mlops-practice.json
grafana/ecs/: datasource.yaml  grafana.ini
importer/: main.py
infra/: main.tf
infra/modules/alb/: main.tf  output.tf  variables.tf
infra/modules/ecr/: main.tf  output.tf  variables.tf
infra/modules/ecs/: main.tf  output.tf  variables.tf
infra/modules/ecs/container_definitions/: dashboard.json  ml_pipeline.json  predictor.json  predictor_canary.json  prometheus.json  pushgateway.json  update_server.json
infra/modules/iam/: main.tf  output.tf  variables.tf
infra/modules/network/: main.tf  output.tf  variables.tf
infra/modules/s3/: main.tf  output.tf  variables.tf
infra/modules/stepfunctions/: main.tf  variables.tf
infra/modules/stepfunctions/definition/: execute_ml_pipeline_parallel.json
ml/: main.py  update_server.py
ml/features/: revision.py
ml/ml_models/: __init__.py  base_ml_model.py  sgd_classifier_ctr_model.py  sgd_classifier_ctr_optuna_model.py
ml/models/: models.py
ml/preprocessors/: base_preprocessor.py  ctr_model_preprocessor.py
ml/schemas/: feature_target.py  metrics.py
ml/sqls/: extract.sql
ml/steps/: __init__.py  create_model_revision_step.py  evaluate_step.py  extract_step.py  preprocess_step.py  sanity_check_step.py  send_metrics_step.py  train_step.py
ml/utils/: aws_controller.py  consts.py  enums.py
ml/utils/logger/: logger_config.py
predictor/: main.py
predictor/schemas/: predict_model.py  request.py  response_log.py
predictor/utils/: setup.py
prometheus/ecs/: prometheus.yaml
prometheus/local/: prometheus.yaml
requirements/: dev.txt  importer.txt  ml.txt  predictor.txt
tests/importer/: test_main.py
tests/ml/features/: test_revision.py
tests/ml/ml_models/: test_base_ml_model.py  test_sgd_classifier_ctr_model.py  test_sgd_classifier_ctr_optuna_model.py
tests/ml/preprocessors/: test_base_preprocessor.py  test_ctr_model_preprocessor.py
tests/ml/steps/: test_create_model_revision_step.py  test_evaluate_step.py  test_extract_step.py  test_preprocess_step.py  test_sanity_check_step.py  test_send_metrics_step.py  test_train_step.py
tests/ml/utils/: test_aws_controller.py
tests/predictor/utils/: test_setup.py
